hphp/hack/test/typecheck/inout/pseudofunction_function_pointers.php.exp
ERROR: File "pseudofunction_function_pointers.php", line 6, characters 3-13:
The two arguments to `meth_caller()` must be:
 - first: `ClassOrInterface::class`
 - second: a single-quoted string literal containing the name of a non-static method of that class (Naming[2026])
ERROR: File "pseudofunction_function_pointers.php", line 7, characters 3-13:
The two arguments to `meth_caller()` must be:
 - first: `ClassOrInterface::class`
 - second: a single-quoted string literal containing the name of a non-static method of that class (Naming[2026])
ERROR: File "pseudofunction_function_pointers.php", line 8, characters 3-13:
The two arguments to `meth_caller()` must be:
 - first: `ClassOrInterface::class`
 - second: a single-quoted string literal containing the name of a non-static method of that class (Naming[2026])
